<resources>
    <string name="app_name" translatable="false">Find Solution</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="phone_number">phone number</string>
    <string name="next">next</string>
    <string name="Skip">skip</string>
    <string name="confirm">confirm</string>
    <string name="plz_enter_code">please enter verification code</string>
    <string name="resend_code">send code again</string>
    <string name="start">start</string>
    <string name="name">name</string>
    <string name="invalid_code">invalid code</string>
    <string name="wait">wait</string>
    <string name="failed">failed</string>
    <string name="activation_code">verification code</string>
    <string name="ok">ok</string>
    <string name="notifications">notification</string>
    <string name="logout">logout</string>
    <string name="sections">Sections</string>
    <string name="personal_information">personal information</string>
    <string name="jop">jop</string>
    <string name="large_text" translatable="false">Visit our New Factory Branch: Second Kilometer on the International Coastal Visit our New Factory Branch: Second Kilometer on the International Coastal</string>
    <string name="more_details">More Details</string>
    <string name="location">location</string>
    <string name="whats_app">Whats App</string>
    <string name="phone_call">Phone Call</string>
    <string name="connect">Communicate</string>
    <string name="connect_us">Connect Us</string>
    <string name="send">send</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="social_sites">Social Sites</string>
    <string name="my_subscriptions">my subscriptions</string>
    <string name="remainder">Residual</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="change_language">Change Language</string>
    <string name="my_package">Package</string>
    <string name="name_space">name</string>
    <string name="choose_section">Choose Section</string>
    <string name="jop_kind">job kind</string>
    <string name="more_details_optional">more details (optional)</string>
    <string name="whats_app_number" translatable="false">whats app number</string>
    <string name="addess">egypt_cairo</string>
    <string name="you_must_subscribe_to_a_package">You must subscribe to a package to be able to add your services</string>
    <string name="complete_the_data_to_register">Complete the userData to register</string>

    <string-array name="menuOptionsTittles">
    <item name="home" type="string">Home</item>
    <item name="my_account" type="string">My Account</item>
    <item name="Subscription" type="string">Subscription</item>
    <item name="ChangeLanguage" type="string">ChangeLanguage</item>
    <item name="connect_us" type="string">Connect Us</item>
    <item name="about_app" type="string">About app</item>
    <item name="Terms_and_Conditions" type="string">Terms and Conditions</item>
    </string-array>
    <string name="change_language_text">تغيير إلى العربية</string>
    <string name="upload_image">Upload Image</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="cancel">cancel</string>
    <string name="perm_image_denied">permission denied</string>
    <string name="subscribe">Subscribe</string>


</resources>