<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <androidx.core.widget.NestedScrollView
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/connect_us_tv"
                    style="@style/tv_large_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/connect_us"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="@+id/connect_us_tv"
                    app:layout_constraintStart_toStartOf="@+id/connect_us_tv"
                    app:layout_constraintTop_toBottomOf="@+id/connect_us_tv"
                    app:srcCompat="@drawable/ic_line" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_view"
                    android:hint="@string/name"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView7"
                    style="@style/strok_edittext">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/colorAccent"
                        android:textSize="13sp"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_view">

                    <EditText
                        android:id="@+id/connect_us_et_email"
                        style="@style/tv_user_medium"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/item_background_stroke_gray_5"
                        android:gravity="center_vertical"
                        android:hint="@string/email"
                        android:padding="@dimen/_5sdp" />

                    <EditText
                        android:id="@+id/connect_us_et_subject"
                        style="@style/tv_user_medium"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@drawable/item_background_stroke_gray_5"
                        android:gravity="center_vertical"
                        android:hint="@string/subject"
                        android:padding="@dimen/_5sdp"

                        />
                </LinearLayout>

                <EditText
                    android:id="@+id/connect_us_et_message"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/item_background_stroke_gray_5"
                    android:gravity="top"
                    android:hint="@string/message"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                <Button
                    android:id="@+id/connect_us_btn_send"
                    android:layout_marginTop="60dp"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_15sdp"
                    android:text="@string/send"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/connect_us_et_message" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:text="@string/social_sites"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="@+id/connect_us_btn_send"
                    app:layout_constraintHorizontal_bias="0.507"
                    app:layout_constraintStart_toStartOf="@+id/connect_us_btn_send"
                    app:layout_constraintTop_toBottomOf="@+id/connect_us_btn_send" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_40sdp"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/connect_us_btn_send"
                    app:layout_constraintStart_toStartOf="@+id/connect_us_btn_send"
                    app:layout_constraintTop_toBottomOf="@+id/textView8">

                    <ImageView
                        android:id="@+id/connect_us_iv_facebook"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_facebook" />

                    <ImageView
                        android:id="@+id/connect_us_iv_google"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_google" />

                    <ImageView
                        android:id="@+id/connect_us_iv_instagram"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_instagram" />

                    <ImageView
                        android:id="@+id/connect_us_iv_twitter"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:src="@drawable/ic_twitter" />


                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>