<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/edit_activity_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="@dimen/_10sdp" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.activity.EditProfileActivity">


                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_margin="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/circleImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:elevation="@dimen/_11sdp"
                            android:src="@drawable/ic_image"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="@dimen/_2sdp" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end|bottom"
                            android:elevation="@dimen/_12sdp"
                            android:src="@drawable/ic_edit" />

                    </FrameLayout>

                </androidx.cardview.widget.CardView>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_view"
                    style="@style/out_line_et"
                    android:hint="@string/name_space"
                    app:hintTextColor="@color/color_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView3">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/colorAccent"
                        android:textSize="13sp"
                        tools:layout_editor_absoluteX="3dp"
                        tools:layout_editor_absoluteY="269dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    style="@style/out_line_et"
                    android:hint="@string/phone_number"

                    app:hintTextColor="@color/color_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_view">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_4sdp"
                        android:inputType="text"
                        android:lines="1"
                        android:textColor="@color/colorAccent"
                        android:textSize="13sp"
                        tools:layout_editor_absoluteX="3dp"
                        tools:layout_editor_absoluteY="269dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout3"
                    style="@style/out_line_et"
                    android:layout_height="@dimen/_45sdp"
                    app:endIconDrawable="@drawable/ic_down_menu"
                    app:endIconTint="@color/colorAccent"
                    app:endIconMode="dropdown_menu"
                    app:hintTextColor="@color/color_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/choose_section"
                        android:paddingStart="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout4"
                    style="@style/out_line_et_no_hint_gray"
                    app:endIconTint="@color/gray"
                    android:layout_height="@dimen/_45sdp"
                    app:endIconDrawable="@drawable/ic_down_menu"
                    app:endIconMode="dropdown_menu"
                    app:hintTextColor="@color/color_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/jop_kind"
                        android:paddingStart="@dimen/_10sdp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout5"
                    style="@style/out_line_et_no_hint_gray"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_weight="1"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top|start"
                        android:hint="@string/more_details_optional"
                        android:inputType="textLongMessage"
                        android:textColor="@color/colorAccent"
                        android:textSize="13sp"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/textInputLayout6"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_80sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:background="@drawable/et_background"
                    android:clipToPadding="false"
                    android:orientation="vertical"
                    app:hintTextColor="@color/color_edittext"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:layout_marginTop="-10dp"
                        android:background="@color/white"
                        android:text="@string/location"
                        android:textColor="@color/color_edittext"
                        android:textSize="@dimen/medium_text" />

                    <TextView
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_gravity="start|top"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:text="@string/addess"
                        android:textColor="@color/black"
                        android:textSize="@dimen/small_text"

                        />

                    <com.google.android.gms.maps.MapView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/_4sdp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_phone"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/item_background_stroke_gray_5"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_number"
                    android:paddingStart="@dimen/_5sdp"
                    app:drawableStartCompat="@drawable/ic_vector_phone"
                    app:layout_constraintEnd_toEndOf="@+id/textInputLayout6"
                    app:layout_constraintStart_toStartOf="@+id/textInputLayout6"
                    app:layout_constraintTop_toBottomOf="@+id/textInputLayout6" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@drawable/item_background_stroke_gray_5"
                    android:drawablePadding="@dimen/_5sdp"
                    android:gravity="center_vertical"
                    android:hint="@string/whats_app_number"
                    android:paddingStart="@dimen/_5sdp"
                    app:drawableStartCompat="@drawable/ic_vector_whats"
                    app:layout_constraintEnd_toEndOf="@+id/tv_phone"
                    app:layout_constraintStart_toStartOf="@+id/tv_phone"
                    app:layout_constraintTop_toBottomOf="@+id/tv_phone" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:text="@string/send"
                    app:backgroundTint="@color/colorAccent"
                    app:cornerRadius="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </LinearLayout>
</layout>